--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "license": "ISC",
   "packageManager": "pnpm@10.15.1",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.943.0",
+    "@aws-sdk/s3-request-presigner": "^3.943.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
